--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 	<groupId>com.jjz.heroku</groupId>
 	<artifactId>heroku-mongo-java-spring</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 
 	<!-- <parent> <groupId>com.jjz</groupId> <artifactId>jjz-base-pom</artifactId> <version>1.0-SNAPSHOT</version> </parent> -->
 
