Updated servlet name (springJavaConfigServlet)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-	<display-name>embeddedTomcatServlet</display-name>
-	<description>embeddedTomcatServlet Description</description>
+	<display-name>springJavaConfigServlet</display-name>
+	<description>springJavaConfigServlet Description</description>
 
 	<!-- Enable escaping of form submission contents -->
 	<context-param>
@@ -57,7 +57,7 @@
 
 	<!-- Handles requests into the application -->
 	<servlet>
-		<servlet-name>embeddedTomcatServlet</servlet-name>
+		<servlet-name>springJavaConfigServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextClass</param-name>
@@ -71,7 +71,7 @@
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>embeddedTomcatServlet</servlet-name>
+		<servlet-name>springJavaConfigServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
