--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,199 @@
 				</dependencies>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<!-- Lexicographically ordered pluginManagement! -->
+			<plugins>
+				<plugin>
+					<groupId>com.github.searls</groupId>
+					<artifactId>jasmine-maven-plugin</artifactId>
+					<version>1.2.0.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.5.1</version>
+					<configuration>
+						<source>${maven-compiler-plugin.source.version}</source>
+						<target>${maven-compiler-plugin.target.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.7</version>
+				</plugin>
+				<plugin>
+					<!-- Adds eclipse support (What does this do)? -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-eclipse-plugin</artifactId>
+					<version>2.9</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>2.1</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.3</version>
+					<configuration>
+						<packagingExcludes>
+							servlet-api-2.5-20081211.jar
+						</packagingExcludes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<!-- jacoco: see http://www.eclemma.org/jacoco/trunk/doc/check-mojo.html -->
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+					<configuration>
+						<check>
+							<classRatio>${jacoco-maven-plugin.classRatio}</classRatio>
+							<instructionRatio>${jacoco-maven-plugin.instructionRatio}</instructionRatio>
+							<methodRatio>${jacoco-maven-plugin.methodRatio}</methodRatio>
+							<branchRatio>${jacoco-maven-plugin.branchRatio}</branchRatio>
+							<complexityRatio>${jacoco-maven-plugin.complexityRatio}</complexityRatio>
+							<lineRatio>${jacoco-maven-plugin.lineRatio}</lineRatio>
+						</check>
+						<excludes>
+							<exclude>${jacoco-maven-plugin.excludes}</exclude>
+						</excludes>
+						<haltOnFailure>false</haltOnFailure>
+					</configuration>
+					<executions>
+						<execution>
+							<id>prepare-surefire</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>check</id>
+							<goals>
+								<goal>check</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<!-- https://maven.apache.org/enforcer/ -->
+					<!-- mvn enforcer:enforce -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-enforcer-plugin</artifactId>
+					<version>1.2</version>
+					<configuration>
+						<fail>true</fail>
+						<ignoreCache>true</ignoreCache>
+						<rules>
+							<bannedDependencies>
+								<excludes>
+									<exclude>javassist:javassist</exclude>
+									<exclude>commons-logging</exclude>
+									<exclude>hsqldb:hsqldb</exclude>
+									<exclude>log4j:log4j</exclude>
+									<exclude>org.codehaus.jackson:jackson*:1.*</exclude>
+									<exclude>org.slf4j:1.5*</exclude>
+									<exclude>org.springframework:2.*</exclude>
+									<exclude>org.springframework:3.0.*</exclude>
+								</excludes>
+							</bannedDependencies>
+							<!-- <banTransitiveDependencies /> -->
+							<DependencyConvergence />
+							<requireMavenVersion>
+								<version>${maven.version.range}</version>
+							</requireMavenVersion>
+							<requireJavaVersion>
+								<version>${java.version}</version>
+							</requireJavaVersion>
+							<requireReleaseDeps>
+								<failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
+								<message>No Snapshots Allowed!</message>
+								<excludes>
+									<exclude>com.jjz:*:*:*</exclude>
+								</excludes>
+							</requireReleaseDeps>
+							<requireUpperBoundDeps />
+						</rules>
+					</configuration>
+					<inherited>false</inherited>
+					<executions>
+						<execution>
+							<id>enforce</id>
+							<goals>
+								<goal>enforce</goal>
+							</goals>
+							<!-- <phase>verify</phase> -->
+							<phase>install</phase>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.15</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>${tomcat-maven-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<!-- http://mojo.codehaus.org/versions-maven-plugin/usage.html -->
+					<!-- mvn versions:display-property-updates -->
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<rulesUri>file://${basedir}/dev/maven/maven-version-rules.xml</rulesUri>
+					</configuration>
+					<inherited>false</inherited>
+				</plugin>
+				<plugin>
+					<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jacoco</groupId>
+										<artifactId>
+											jacoco-maven-plugin
+										</artifactId>
+										<versionRange>
+											[${jacoco-maven-plugin.version},)
+										</versionRange>
+										<goals>
+											<goal>prepare-agent</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty-maven-plugin.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 	</build>
 
 	<dependencyManagement>
